# PIKAR-AI

./: .dockerignore  .env.development  .env.example  .env.production  .gcloudignore  .gitignore  .pre-commit-config.yaml  .vercelignore  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  AGENTS.md  AI_AGENT_TESTING_IMPLEMENTATION_SUMMARY.md  API_RESPONSE_VALIDATION_SUMMARY.md  ARCHITECTURAL_REFACTORING.md  CLAUDE.md  DATA_ENCRYPTION_SECURITY_SUMMARY.md  Dockerfile  Dockerfile.worker  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_CONFIGURATION_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY_REPORT.md  FILE_UPLOAD_SECURITY_SUMMARY.md  GEMINI.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  INTEGRATION_TESTING_IMPLEMENTATION_SUMMARY.md  LICENSE  MOCK_DATA_REPLACEMENT_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_TESTING_IMPLEMENTATION_SUMMARY.md  PIKAR_AI_AUDIT_FINAL_REPORT.md  PIKAR_AI_IMPLEMENTATION_COMPLETE.md  PIKAR_AI_REMEDIATION_SPRINT_PLAN.md  PRIORITIZED_DEVELOPMENT_TASKS.md  README.md  RISK_ASSESSMENT_MITIGATION.md  SECURITY_IMPLEMENTATION_SUMMARY.md  STRIPE_SETUP_CHECKLIST.md  TYPE_SAFETY_IMPLEMENTATION_SUMMARY.md  (+68 more)
.claude/: settings.local.json
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.cursor/: mcp.json
.planning/: MILESTONES.md  PLAN-1.md  PLAN-2.md  PROJECT.md  REQUIREMENTS-v2.md  REQUIREMENTS-v4.md  REQUIREMENTS.md  ROADMAP-v2.md  ROADMAP-v4.md  ROADMAP.md  STATE.md  config.json  v11.0-MILESTONE-AUDIT.md  v11.0-PROJECT-CONTEXT.md  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md
.pre-commit-hooks/: check-bare-except.py  check-mutable-defaults.py  check-print-statements.py
.tmp/: backend_logs.txt  bmad_contents.json
admin/: .env.local.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
app/: .env.example  __init__.py  agent.py  debug_import.py  exceptions.py  fast_api_app.py  sse_utils.py  workers.py
audit_output/: blocker_catalog.md  browser_subset_results.md  env_snapshot.md  journey_matrix.csv  runtime_evidence.jsonl  summary.md  workflow_matrix.csv
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
deployment/: README.md
docs/: 10x_analysis_session_1.md  AGENT_IMAGE_CONSTRAINTS_ANALYSIS.md  CHAT_HISTORY_STORAGE.md  VERTEX_AI_SETUP.md  agent-to-ui-guide.md  ci-repair-checklist.md  failed-commits-analysis.md  google-oauth-verification-reply-draft.md  google-oauth-verification-video-script.md  integration_roadmap.md  knowledge-vault-guide.md  landing_page_strategy.md  self-improvement-policy.md  skill_matching_plan.md  testing.md
e2e/: auth-flow.e2e.js  campaign-workflows.e2e.js  global-setup.js  global-teardown.js  smoke.spec.js
e2e-results/: junit.xml  results.json
execution/: check_chunk_008.py  check_json.py  chunk_sql.py  debug_chunk.py  fix_all_chunks.py  fix_double_escapes.py  fix_json_newlines.py  generate_custom_skills_file.py  inspect_slowapi.py  seed_skills_from_fs.py  seed_skills_python.py  verify_chunk_002.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  build_log.txt  lint_final.txt  lint_output.txt  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.client.config.ts  sentry.server.config.ts  tsc_output.txt  tsc_output_2.txt  tsconfig.json  vercel.json
implementation-plans/: phase1-authentication-security.md  phase1-security-validation.md  phase3-performance-ux.md  phase4-testing-qa.md  phase5-production-deployment.md  project-timeline-resources.md
plans/: CODEBASE_TECHNICAL_ANALYSIS_REPORT.md  TECHNICAL_DEBT_REMEDIATION_TASKS.md  codebase-audit-report.md  codebase-remediation-tasks.md  codex-build-app-remediation-plan.md  workflow_activation_implementation_checklist.md  workflow_canary_internal_allowlist.md  workflow_defect_register.md  workflow_execution_sequence_tracker.md  workflow_incident_runbook.md  workflow_risk_matrix_baseline_2026-02-18.md  workflow_rollout_rollback_rules.md  workflow_severity_tiers.md  workflow_wave_rollout_evidence_2026-02-19.md  workflow_wave_signoff_checklist.md
public/: sw.js
remotion-render/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: check_phase2_readiness.py  debug_media.py  debug_network.py  debug_remotion.py  (+29 more)
(+3723 files in other folders)
