[project]
name = "pikar-ai"
version = "0.1.0"
description = "Multi-agent executive system built on Google ADK with A2A Protocol"
authors = [
    {name = "Pikar AI Team", email = "team@pikar.ai"},
]
license = {text = "Proprietary"}
dependencies = [
    "google-adk>=1.16.0,<2.0.0",
    "a2a-sdk~=0.3.9",
    "nest-asyncio>=1.6.0,<2.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-speech>=2.33.0,<3.0.0",
    "google-cloud-texttospeech>=2.33.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.118.0,<2.0.0",
    "fastapi~=0.115.8",
    "slowapi>=0.1.9",
    "uvicorn~=0.34.0",
    "gunicorn>=23.0.0,<24.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "supabase>=2.27.2,<3.0.0",
    "cryptography>=46.0.3",
    "reportlab>=4.4.9",
    "pypdf>=6.6.2",
    "python-docx>=1.1.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.45.0",
    "python-pptx>=1.0.2",
    "redis>=5.0.0,<6.0.0",
    "google-genai>=0.2.0",
    "PyJWT>=2.8.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "stripe>=7.0.0,<8.0.0",
    "httpx>=0.27.0,<1.0.0",
    "PyGithub~=2.8.1",
    "nh3>=0.2.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "polars>=1.0",
    "weasyprint>=62.0",
    "matplotlib>=3.8",
    "hubspot-api-client>=9.0.0",
    "jinja2>=3.1.0",
]
requires-python = ">=3.10,<3.14"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "locust>=2.29.0,<3.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Type checking rules - balanced for practical use with third-party libraries
# Keep import/attribute issues ignored (common with dynamic libraries)
unresolved-import = "ignore"
unresolved-attribute = "ignore"
# Enable type checking for our own code quality
invalid-argument-type = "warn"
invalid-assignment = "warn"
invalid-return-type = "warn"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
addopts = "--ignore=tests/load_test"
filterwarnings = [
    "ignore:'enablePackrat' deprecated - use 'enable_packrat':DeprecationWarning:pyiceberg\\.expressions\\.parser",
    "ignore:'escChar' argument is deprecated, use 'esc_char':DeprecationWarning:pyiceberg\\.expressions\\.parser",
    "ignore:'unquoteResults' argument is deprecated, use 'unquote_results':DeprecationWarning:pyiceberg\\.expressions\\.parser",
    "ignore:Using `@model_validator` with mode='after' on a classmethod is deprecated\\.:DeprecationWarning:pyiceberg\\..*",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.agent-starter-pack]
# Generation metadata - enables CLI commands to understand project context
# These fields allow any generated project to work as a remote template
name = "pikar-ai"
description = "ReAct agent with A2A protocol [experimental]"
base_template = "adk_a2a"
agent_directory = "app"

# Generation context
generated_at = "2026-01-19T23:00:55.498023+00:00"
asp_version = "0.31.5"

[tool.agent-starter-pack.create_params]
# Parameters used during project creation
deployment_target = "cloud_run"
session_type = "in_memory"
cicd_runner = "google_cloud_build"
include_data_ingestion = false
datastore = "none"

